Upgraded to latest Instant Messaging Plugin.

--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.jvnet.hudson.plugins</groupId>
+		<groupId>org.hudsonci.plugins</groupId>
 		<artifactId>instant-messaging-parent</artifactId>
 		<version>3.0.0-M4</version>
 		<relativePath>../instant-messaging-parent-plugin/pom.xml</relativePath>
 	</parent>
 
+	<groupId>org.hudsonci.plugins</groupId>
 	<artifactId>instant-messaging</artifactId>
 	<name>Hudson instant-messaging plugin</name>
-	<version>1.22-SNAPSHOT</version>
+	<version>1.22-h-1-SNAPSHOT</version>
 	<packaging>hpi</packaging>
 	<url>http://wiki.hudson-ci.org/display/HUDSON/Instant+Messaging+Plugin</url>
 	<developers>
@@ -34,9 +35,9 @@
     </licenses>
     
     <scm>
-        <connection>scm:git:git@github.com:jenkinsci/instant-messaging-plugin.git</connection>
-        <developerConnection>scm:git:git@github.com:jenkinsci/instant-messaging-plugin.git</developerConnection>
-        <url>http://fisheye.jenkins-ci.org/browse/Jenkins/trunk/trunk/hudson/plugins/instant-messaging</url>
-    </scm>
+        <connection>scm:git:git@github.com:hudson3-plugins/instant-messaging-plugin.git</connection>
+        <developerConnection>scm:git:git@github.com:hudson3-plugins/instant-messaging-plugin.git</developerConnection>
+        <url>https://github.com/hudson3-plugins/instant-messaging-plugin</url>
+    </scm>    
 </project>  
 
