--- a/pom.xml
+++ b/pom.xml
@@ -1,31 +1,31 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.hudsonci.plugins</groupId>
-		<artifactId>instant-messaging-parent</artifactId>
-		<version>3.2.0-SNAPSHOT</version>
-		<relativePath>../instant-messaging-parent-plugin/pom.xml</relativePath>
-	</parent>
+    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.hudsonci.plugins</groupId>
+        <artifactId>instant-messaging-parent</artifactId>
+        <version>3.2.0</version>
+        <relativePath>../instant-messaging-parent-plugin/pom.xml</relativePath>
+    </parent>
 
-	<groupId>org.hudsonci.plugins</groupId>
-	<artifactId>instant-messaging</artifactId>
-	<name>Hudson instant-messaging plugin</name>
-	<version>1.22-h-2-SNAPSHOT</version>
-	<packaging>hpi</packaging>
-	<url>http://wiki.hudson-ci.org/display/HUDSON/Instant+Messaging+Plugin</url>
-	<developers>
-		<developer>
-			<id>kutzi</id>
-			<name>Christoph Kutzinski</name>
-			<email>kutzi@gmx.de</email>
-			<timezone>1</timezone>
-		</developer>
+    <groupId>org.hudsonci.plugins</groupId>
+    <artifactId>instant-messaging</artifactId>
+    <name>Hudson instant-messaging plugin</name>
+    <version>1.22-h-2</version>
+    <packaging>hpi</packaging>
+    <url>http://wiki.hudson-ci.org/display/HUDSON/Instant+Messaging+Plugin</url>
+    <developers>
         <developer>
-          <id>kohsuke</id>
-          <name>Kohsuke Kawaguchi</name>
-          <email>kk@kohsuke.org</email>
+            <id>kutzi</id>
+            <name>Christoph Kutzinski</name>
+            <email>kutzi@gmx.de</email>
+            <timezone>1</timezone>
         </developer>
-	</developers>
+        <developer>
+            <id>kohsuke</id>
+            <name>Kohsuke Kawaguchi</name>
+            <email>kk@kohsuke.org</email>
+        </developer>
+    </developers>
 
     <licenses>
         <license>
